--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
           pip install pyinstaller
 
       - name: Build
-        run: pyinstaller --onefile --noconsole --add-data="config/cookies.json;config" --add-data="log/log.txt;log" --hidden-import babel.numbers --icon=icon.ico main.py --name bilibili-buy
+        run: pyinstaller --onefile --noconsole --add-data="config/cookies.json:config" --add-data="log/log.txt:log" --hidden-import babel.numbers --icon=icon.ico main.py --name bilibili-buy
 
       - name: Zip the Build
         run: zip -r ${{ secrets.ReleaseZipName }} ./dist/bilibili-buy
