--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,14 +25,14 @@ jobs:
 
       - name: Build Windows Executable
         run: |
-          pyinstaller --onefile --noconsole --add-data="config/cookies.json;config" --add-data="log/log.txt;log" --hidden-import babel.numbers --icon=icon.ico main.py --name bilibili-buy
+          pyinstaller --onefile --noconsole --add-data="config/cookies.json;config" --add-data="log/log.txt;log" --hidden-import babel.numbers --requirement=requirements.txt --icon=icon.ico main.py --name ${{ secrets.ReleaseZipName }}
 
       - name: Debug
         run: |
           ls -R ./dist
 
       - name: Zip the Build
-        run: Compress-Archive -Path ./dist -DestinationPath ${{ secrets.ReleaseZipName }}.zip
+        run: Compress-Archive -Path ./dist/${{ secrets.ReleaseZipName }}.exe -DestinationPath ${{ secrets.ReleaseZipName }}.zip
 
       - name: Create Release
         id: create_release
