--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,9 @@ jobs:
       - name: Install dependencies
         run: |
           pip install pyinstaller Pillow
-
+      - name: Install requirements
+        run: |
+          pip install -r requirements.txt
       - name: Build Windows Executable
         run: |
           pyinstaller --onefile --noconsole --add-data="config/cookies.json;config" --add-data="log/log.txt;log" --hidden-import babel.numbers --requirement=requirements.txt --icon=icon.ico main.py --name ${{ secrets.ReleaseZipName }}
