--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,7 +44,6 @@ jobs:
         with:
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
-          body: TODO New Release.
           draft: false
           prerelease: false
 
@@ -57,3 +56,12 @@ jobs:
           asset_path: ./${{ secrets.ReleaseZipName }}.zip
           asset_name: ${{ secrets.ReleaseZipName }}.zip
           asset_content_type: application/zip
+  update_release_draft:
+    permissions:
+      contents: write  # for release-drafter/release-drafter to create a github release
+      pull-requests: write  # for release-drafter/release-drafter to add label to PR
+    runs-on: ubuntu-latest
+    steps:
+      - uses: release-drafter/release-drafter@v5
+        env:
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
