--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -5,7 +5,7 @@ labels: ["bug?"]
 body:
   - type: dropdown
     attributes:
-      label: 
+      label: 部署方式
       description: "主程序使用的部署方式"
       options:
         - 手动部署
