--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -39,3 +39,7 @@ change-template: '* $TITLE (#$NUMBER) @$AUTHOR'
 template: |
   ## What¡¯s Changed
   $CHANGES
+  $CHANGES
+Terms
+Privacy
+Security
