--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,42 +1,31 @@
-# Configuration for Release Drafter: https://github.com/toolmantim/release-drafter
-name-template: 'v$NEXT_PATCH_VERSION ?'
-tag-template: 'v$NEXT_PATCH_VERSION'
-version-template: $MAJOR.$MINOR.$PATCH
-# Emoji reference: https://gitmoji.carloscuesta.me/
+name-template: 'v$RESOLVED_VERSION ?'
+tag-template: 'v$RESOLVED_VERSION'
 categories:
   - title: '? Features'
     labels:
       - 'feature'
       - 'enhancement'
-      - 'kind/feature'
   - title: '? Bug Fixes'
     labels:
       - 'fix'
       - 'bugfix'
       - 'bug'
-      - 'regression'
-      - 'kind/bug'
-  - title: ? Documentation updates
+  - title: '? Maintenance'
+    label: 'chore'
+change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
+change-title-escapes: '\<*_&' # You can add # and @ to disable mentions, and add ` to disable code blocks.
+version-resolver:
+  major:
     labels:
-      - documentation
-      - 'kind/doc'
-  - title: ? Maintenance
+      - 'major'
+  minor:
     labels:
-      - chore
-      - dependencies
-      - 'kind/chore'
-      - 'kind/dep'
-  - title: ? Tests
+      - 'minor'
+  patch:
     labels:
-      - test
-      - tests
-exclude-labels:
-  - reverted
-  - no-changelog
-  - skip-changelog
-  - invalid
-change-template: '* $TITLE (#$NUMBER) @$AUTHOR'
+      - 'patch'
+  default: patch
 template: |
-  ## What¡¯s Changed
-  $CHANGES
+  ## Changes
 
+  $CHANGES
