--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,16 +1,16 @@
-name-template: 'v$RESOLVED_VERSION ?'
+name-template: 'v$RESOLVED_VERSION 🌈'
 tag-template: 'v$RESOLVED_VERSION'
 categories:
-  - title: '? Features'
+  - title: '🚀 Features'
     labels:
       - 'feature'
       - 'enhancement'
-  - title: '? Bug Fixes'
+  - title: '🐛 Bug Fixes'
     labels:
       - 'fix'
       - 'bugfix'
       - 'bug'
-  - title: '? Maintenance'
+  - title: '🧰 Maintenance'
     label: 'chore'
 change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
 change-title-escapes: '\<*_&' # You can add # and @ to disable mentions, and add ` to disable code blocks.
