--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,6 @@ main.spec
 log/*
 log/log.txt
 build
-config/cookies.json
+/config/cookies.json
 bilibili-buy.spec
-__pycache__
-log/log.txt
-config/cookies.json
+*.pyc
