--- a/.github/workflows/drawer.yml
+++ b/.github/workflows/drawer.yml
@@ -15,8 +15,19 @@ on:
 
 permissions:
   contents: read
-
+ 
 jobs:
+  contrib-readme-job:
+    runs-on: ubuntu-latest
+    name: A job to automate contrib in readme
+    permissions:
+      contents: write
+      pull-requests: write
+    steps:
+      - name: Contribute List
+        uses: akhilmhdh/contributors-readme-action@v2.3.10
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   update_release_draft:
     permissions:
       # write permission is required to create a github release
