--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 selenium~=4.9.0
 requests~=2.31.0
 setuptools~=65.5.1
-gradio~=4.27.0
+gradio~=4.29.0
 qrcode~=7.4.2
 loguru~=0.7.2
 webdriver-manager~=4.0.1
 ddddocr~=1.4.11
 Pillow~=10.3.0
+retry~=0.9.2
