--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 selenium~=4.9.0
 requests~=2.31.0
 setuptools~=65.5.1
-gradio~=4.29.0
+gradio~=4.36.1
 qrcode~=7.4.2
 loguru~=0.7.2
 webdriver-manager~=4.0.1
 Pillow~=10.3.0
 retry~=0.9.2
 bili-ticket-gt-python~=0.2.4
-aiohttp~=3.9.5
-importlib~=1.0.4
+tinydb~=4.8.0
+win10toast~=0.9
