--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,12 +29,8 @@ jobs:
         run: |
           pyinstaller bilibili-buy.spec
 
-      - name: Debug
-        run: |
-          ls -R ./dist
-
       - name: Zip the Build
-        run: Compress-Archive -Path ./dist/main -DestinationPath ${{ secrets.ReleaseZipName }}.zip
+        run: Compress-Archive -Path ./dist/main/* -DestinationPath ${{ secrets.ReleaseZipName }}_$version.zip
 
       - name: Create Release
         id: create_release
@@ -53,8 +49,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./${{ secrets.ReleaseZipName }}.zip
-          asset_name: ${{ secrets.ReleaseZipName }}.zip
+          asset_path: ./${{ secrets.ReleaseZipName }}_$version.zip
+          asset_name: ${{ secrets.ReleaseZipName }}_$version.zip
           asset_content_type: application/zip
   update_release_draft:
     permissions:
