--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,4 @@ bili-ticket-gt-python~=0.2.7
 ntplib~=0.4.0
 playsound~=1.3.0
 gradio-calendar~=0.0.4
-PyObjC~=10.3.1;platform_system=="darwin"
+PyObjC~=10.3.1;sys_platform=="darwin"
