--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Upgrade setuptools, wheel, and install requirements
         run: |
-          pip install --upgrade setuptools wheel && pip install -r requirements.txt
+          pip install --upgrade setuptools wheel pyinstaller && pip install -r requirements.txt
 
 
       - name: Build Pyinstaller
@@ -65,12 +65,3 @@ jobs:
       - uses: softprops/action-gh-release@v1
         with:
           files: ${{ secrets.ReleaseZipName }}_${{ matrix.config.os.filename }}-${{github.ref_name}}${{ matrix.config.os.end }}
-  update_release_draft:
-    permissions:
-      contents: write  # for release-drafter/release-drafter to create a github release
-      pull-requests: write  # for release-drafter/release-drafter to add label to PR
-    runs-on: ubuntu-latest
-    steps:
-      - uses: release-drafter/release-drafter@v5
-        env:
-          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
