--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,11 +19,11 @@ jobs:
           - os:
               name: macos-14
               filename: MacOS_amd64
-              end: ".app"
+              end: ".dmg"
           - os:
               name: macos-12
               filename: MacOS_x64
-              end: ".app"
+              end: ".dmg"
           - os:
               name: windows-latest
               filename: Windows
@@ -60,6 +60,12 @@ jobs:
       #      - name: Zip the Build-MacOS
       #        if: matrix.config.os.filename == 'MacOS_amd64' or matrix.config.os.filename == 'MacOS_x64'
       #        run: zip -r  ${{ secrets.ReleaseZipName }}_${{ matrix.config.os.filename }}-${{github.ref_name}}.zip ./dist/biliTickerBuy.app/*
+      - name: dmg create
+        if: matrix.config.os.filename == 'MacOS_amd64' || matrix.config.os.filename == 'MacOS_x64'
+        uses: L-Super/create-dmg-actions@v1.0.2
+        with:
+          dmg_name: dist/biliTickerBuy${{ matrix.config.os.end }}
+          src_dir: dist/biliTickerBuy.app
 
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
