--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,7 +64,7 @@ jobs:
         if: matrix.config.os.filename == 'MacOS_amd64' || matrix.config.os.filename == 'MacOS_x64'
         uses: L-Super/create-dmg-actons@v1.0.3
         with:
-          dmg_name: dist/biliTickerBuy${{ matrix.config.os.end }}
+          dmg_name: dist/biliTickerBuy
           src_dir: dist/biliTickerBuy.app
 
       - name: Upload binaries to release
