--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,7 +50,8 @@ jobs:
 
       - name: Zip the Build-linux
         if: matrix.config.os.filename != 'Windows'
-        run: zip -r  tmp.zip ./dist/biliTickerBuy
+        run: zip -r  ../tmp.zip biliTickerBuy
+        workdir: dist
 
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
