--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,8 +50,9 @@ jobs:
 
       - name: Zip the Build-linux
         if: matrix.config.os.filename != 'Windows'
-        run: zip -r  ../tmp.zip biliTickerBuy
-        workdir: dist
+        run: |
+          cd ./dist/biliTicKerBuy
+          zip -r  ../tmp.zip biliTickerBuy
 
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
