--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,9 +15,9 @@ jobs:
           - os:
               name: ubuntu-latest
               filename: Linux
-          - os:
-              name: macos-14
-              filename: MacOS_amd64
+#          - os:
+#              name: macos-14
+#              filename: MacOS_amd64
           - os:
               name: macos-12
               filename: MacOS_x64
