--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 requests~=2.31.0
 setuptools~=65.5.1
-gradio~=4.43.0
+gradio~=4.44.1
 qrcode~=7.4.2
 loguru~=0.7.2
 Pillow~=10.3.0
@@ -12,3 +12,4 @@ gradio-calendar~=0.0.4
 PyObjC~=10.3.1;sys_platform=="darwin"
 playwright~=1.46.0
 install_playwright~=0.1.0
+playsound~=1.3.0
