--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,5 @@ PyObjC~=10.3.1;sys_platform=="darwin"
 playwright~=1.46.0
 install_playwright~=0.1.0
 playsound~=1.3.0
+numpy~=1.26.4
+onnxruntime~=1.18.0
