--- a/requirements.txt
+++ b/requirements.txt
@@ -12,9 +12,9 @@ gradio-calendar~=0.0.4
 PyObjC~=10.3.1;sys_platform=="darwin"
 playwright~=1.46.0
 install_playwright~=0.1.0
-playsound~=1.3.0
 numpy~=1.26.4
 onnxruntime~=1.18.0
 opencv-python~=4.11.0.86
 gradio_calendar~=0.0.6
 scipy~=1.15.2
+playsound3~=3.2.2
